--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "start": "npm run build && node ./dist/app.js",
+    "dev": "npm-run-all --parallel watch start2",
     "watch": "tsc -w",
-    "start": "node ./dist/app.js",
     "start2": "nodemon ./dist/app.js",
-    "dev": "npm-run-all --parallel watch start2"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
