--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
+    "resend": "^6.1.2",
     "yup": "^1.7.1"
   },
   "devDependencies": {
